Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112648

Extra semicolon warnings in qtablewidget.h, qimage.h and qdebug.h

    XMLWordPrintable

Details

    • 588eab99d (dev), e158ef16a (6.5)

    Description

      /Users/user/Qt/6.5.0/macos/lib/QtGui.framework/Headers/qimage.h:20:43: warning: extra ';' outside of a function is incompatible with C++98 [-Wc++98-compat-extra-semi]
      /Users/user/Qt/6.5.0/macos/lib/QtCore.framework/Headers/qdebug.h:572:32: warning: extra ';' outside of a function is incompatible with C++98 [-Wc++98-compat-extra-semi]
      /Users/user/Qt/6.5.0/macos/lib/QtCore.framework/Headers/qdebug.h:573:40: warning: extra ';' outside of a function is incompatible with C++98 [-Wc++98-compat-extra-semi]
      /Users/user/Qt/6.5.0/macos/lib/QtWidgets.framework/Headers/qtablewidget.h:27:75: warning: extra ';' after member function definition [-Wextra-semi]
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            poikelin Joni Poikelin
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes